crates/monochange/src/snapshots/monochange__mcp____tests__affected_packages_reports_failed_policy_for_uncovered_changes@affected_packages_reports_failed_policy_for_uncovered_changes.snap
---
source: crates/monochange/src/mcp.rs
expression: redacted
---
{
  "action": "affected_packages",
  "evaluation": {
    "affectedPackageIds": [
      "core"
    ],
    "changedPaths": [
      "crates/core/src/lib.rs"
    ],
    "changesetPaths": [],
    "comment": "[multiline text]",
    "coveredPackageIds": [],
    "enforce": false,
    "errors": [
      "changed packages are not covered by attached changesets: core"
    ],
    "ignoredPaths": [],
    "labels": [],
    "matchedPaths": [
      "crates/core/src/lib.rs"
    ],
    "matchedSkipLabels": [],
    "required": true,
    "status": "failed",
    "summary": "changeset verification failed: attached changesets do not cover 1 changed package",
    "uncoveredPackageIds": [
      "core"
    ]
  },
  "ok": false,
  "summary": "changeset verification failed: attached changesets do not cover 1 changed package"
}
