crates/monochange/src/snapshots/monochange__mcp____tests__change_reports_errors_for_unknown_package_ids@change_reports_errors_for_unknown_package_ids.snap
---
source: crates/monochange/src/mcp.rs
expression: content_text(&result)
---
{
  "action": "change",
  "error": "config error: change package reference `missing` did not match any discovered package",
  "ok": false,
  "root": "[ROOT]
  "summary": "config error: change package reference `missing` did not match any discovered package"
}
