crates/monochange/src/snapshots/monochange__mcp____tests__changeset@change_writes_type_only_markdown_changeset.snap
---
source: crates/monochange/src/mcp.rs
expression: contents
---
---
core: docs
---

# document the migration
