crates/monochange/src/snapshots/monochange__mcp____tests__diagnostics_reports_missing_requested_changesets@diagnostics_reports_missing_requested_changesets.snap
---
source: crates/monochange/src/mcp.rs
expression: content_text(&result)
---
{
  "action": "diagnostics",
  "error": "config error: requested changeset `missing.md` does not exist",
  "ok": false,
  "root": "[ROOT]
  "summary": "config error: requested changeset `missing.md` does not exist"
}
