crates/monochange/src/snapshots/monochange__mcp____tests__diagnostics_returns_changeset_context@diagnostics_returns_changeset_context.snap
---
source: crates/monochange/src/mcp.rs
expression: content_text(&result)
---
{
  "action": "diagnostics",
  "ok": true,
  "report": {
    "changesets": [
      {
        "context": {
          "capabilities": {
            "actorProfiles": false,
            "commitWebUrls": false,
            "issueComments": false,
            "relatedIssues": false,
            "reviewRequestLookup": false
          },
          "host": null,
          "introduced": null,
          "lastUpdated": null,
          "provider": "generic_git",
          "relatedIssues": []
        },
        "details": null,
        "path": ".changeset/feature.md",
        "summary": "Add feature",
        "targets": [
          {
            "bump": "patch",
            "changeType": "patch",
            "evidenceRefs": [],
            "id": "core",
            "kind": "package",
            "origin": "direct-change"
          }
        ]
      }
    ],
    "requestedChangesets": [
      ".changeset/feature.md"
    ]
  },
  "summary": "Loaded 1 changeset diagnostic record(s)."
}
