crates/monochange/src/snapshots/monochange__mcp____tests__discover_reports_config_errors_for_invalid_workspace_fixture@discover_reports_config_errors_for_invalid_workspace_fixture.snap
---
source: crates/monochange/src/mcp.rs
expression: content_text(&result)
---
{
  "action": "discover",
  "error": "config error: [release_notes].change_templates uses unsupported variables: commit_hash",
  "ok": false,
  "root": "[ROOT]
  "summary": "config error: [release_notes].change_templates uses unsupported variables: commit_hash"
}
