crates/monochange/src/snapshots/monochange__mcp____tests__lint_explain_reports_unknown_ids@lint_explain_reports_unknown_ids.snap
---
source: crates/monochange/src/mcp.rs
expression: content_text(&result)
---
{
  "action": "lint_explain",
  "error": "unknown lint rule or preset `cargo/does-not-exist`",
  "ok": false,
  "summary": "Unknown lint rule or preset `cargo/does-not-exist`."
}
